# isola_cli

./: CMakeLists.txt  README.md
isola/: CMakeLists.txt  board.cpp  board.h  isola.cpp  isola.h  player.cpp  player.h
